--- a/my_angular_app/src/app/app.component.html
+++ b/my_angular_app/src/app/app.component.html
@@ -1,4 +1,52 @@
-
 <!-- <app-cart></app-cart> -->
 
-<app-header></app-header>
+<!-- <app-header></app-header> -->
+<!-- <div class="container">
+    <div class="row">
+        <div class="col-lg-4">
+        </div>
+        <div class="col-lg-4">
+            <form>
+                <div class="form-group">
+                    <label >First Name</label>
+                    <input type="text"  class="form-control" name="fname" [(ngModel)]="fname">
+                </div>
+                <div class="form-group">
+                    <label >Last Name</label>
+                    <input type="text" class="form-control" name="lname" [(ngModel)]="lname">
+                </div>
+                <div class="form-group">
+                    <label for="inputAddress">Address</label>
+                    <input type="text" class="form-control" name="address" [(ngModel)]="address">
+                </div>
+                <div class="form-group">
+                    <label for="inputAddress2">Phone Number</label>
+                    <input type="text" class="form-control" name="phone_num" [(ngModel)]="phone_num">
+                </div>
+                <div class="form-group">
+                        <label for="inputEmail4">Email</label>
+                        <input type="text" class="form-control" name="email" [(ngModel)]="email">
+                    </div>
+                    <div class="form-group">
+                        <label for="inputPassword4">Password</label>
+                        <input type="password" class="form-control">
+                    </div>
+                <br>
+                <button type="button" class="btn btn-primary"(click)="formdata()">Submit</button>
+
+                <br><br>
+
+                <p>First Name : {{fname}}</p>
+                <p>Last Name : {{lname}}</p>
+                <p>Address : {{address}}</p>
+                <p>Phone Number : {{phone_num}}</p>
+                <p>Email : {{email}}</p>
+            </form>
+        </div>
+        <div class="col-lg-4">
+        </div>
+    </div>
+</div> -->
+<app-coffee-header></app-coffee-header>
+<app-coffee></app-coffee>
+<app-coffee-footer></app-coffee-footer>
