fatch data from json using http client

--- a/angular-practice-week3/src/app/app.component.html
+++ b/angular-practice-week3/src/app/app.component.html
@@ -1,6 +1,8 @@
 <app-template-driven-form></app-template-driven-form>
 <app-show-template-form-data></app-show-template-form-data>
 
+<br><br><br>
 
+<app-reactive-form></app-reactive-form>
 
 <router-outlet></router-outlet>
